HISTORY
=======

0.4 - Added Matrix-calculation
-------------------------------

* User can decide between matrix and table format for classification
* Added examples for both
* BugFix in count-method
* Style improvements

0.2 - Syntax Improvement
------------------------

* Better documentation
* Improved parameters of functions

0.1 - Initial release
---------------------

* Rainflow for HDF5 and Numpy-Arrays
* Classification before and after algorithm
* Removing peaks from data before calculation